Refactor server configuration and update manifest generation to use environment variables for hostname and ports

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 # Server Configuration
-PORT=55031
+HOSTNAME=dbx.paperentry.ai
+SERVER_PORT=55031
+CLIENT_PORT=55030
 NODE_ENV=development
 
 # OpenAI Configuration
@@ -7,8 +9,8 @@ OPENAI_API_KEY=your_openai_api_key_here
 OPENAI_MODEL=gpt-4-turbo-preview
 OPENAI_MAX_TOKENS=2000
 
-# Office Add-in Configuration
-OFFICE_ADDIN_URL=https://localhost:55030
+# Office Add-in Configuration (computed from HOSTNAME and CLIENT_PORT)
+OFFICE_ADDIN_URL=https://${HOSTNAME}:${CLIENT_PORT}
 
 # Security
 JWT_SECRET=your_jwt_secret_key_here
@@ -16,7 +18,7 @@ RATE_LIMIT_REQUESTS=100
 RATE_LIMIT_WINDOW=15m
 
 # CORS Settings
-CORS_ORIGIN=https://localhost:55030
+CORS_ORIGIN=https://dbx.paperentry.ai:55030
 
 # File Upload Settings
 MAX_FILE_SIZE=10485760
@@ -24,3 +26,6 @@ ALLOWED_FILE_TYPES=pdf,docx,txt
 
 # Session Settings
 SESSION_TIMEOUT=3600000
+
+# Frontend API URL
+REACT_APP_API_URL=https://dbx.paperentry.ai:55031/api
